--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,12 @@
 sprites/
 color/
-animated/
+renders/
 palettes/
 themes/
 testing.py
 setup.json
 log.txt
-render.gif
-render0.png
-render1.png
-render2.png
+empty.png
 .DS_Store
 .vscode/
 cogs/__pycache__/
