missing extraneous vanilla tiles

--- a/custom/vanilla-extensions.json
+++ b/custom/vanilla-extensions.json
@@ -79,5 +79,122 @@
         "0",
         "3"
       ]
+  },
+  {
+    "sprite":"cup",
+    "name":"cup",
+    "color":
+      [
+        "4",
+        "2"
+      ]
+  },
+  {
+    "sprite":"door_map",
+    "name":"door_map",
+    "color":
+      [
+        "2",
+        "2"
+      ]
+  },
+  {
+    "sprite":"grid",
+    "name":"grid",
+    "color":
+      [
+        "4",
+        "1"
+      ]
+  },
+  {
+    "sprite":"husk_map",
+    "name":"husk_map",
+    "color":
+      [
+        "6",
+        "1"
+      ]
+  },
+  {
+    "sprite":"island",
+    "name":"island",
+    "color":
+      [
+        "1",
+        "1"
+      ]
+  },
+  {
+    "sprite":"ladder",
+    "name":"ladder",
+    "color":
+      [
+        "6",
+        "3"
+      ]
+  },
+  {
+    "sprite":"shirt",
+    "name":"shirt",
+    "color":
+      [
+        "4",
+        "2"
+      ]
+  },
+  {
+    "sprite":"text_cup",
+    "name":"text_cup",
+    "color":
+      [
+        "4",
+        "2"
+      ]
+  },
+  {
+    "sprite":"text_ladder",
+    "name":"text_ladder",
+    "color":
+      [
+        "6",
+        "3"
+      ]
+  },
+  {
+    "sprite":"text_shirt",
+    "name":"text_shirt",
+    "color":
+      [
+        "0",
+        "3"
+      ]
+  },
+  {
+    "sprite":"tree_map",
+    "name":"tree_map",
+    "color":
+      [
+        "5",
+        "2"
+      ]
+  },
+  {
+    "sprite":"tree2",
+    "name":"tree2",
+    "color":
+      [
+        "5",
+        "2"
+      ]
+  },
+  {
+    "sprite":"wall_map",
+    "name":"wall_map",
+    "color":
+      [
+        "1",
+        "1"
+      ]
   }
 ]
