Fix custom tiles not tiling properly

--- a/custom/vanilla-extensions.json
+++ b/custom/vanilla-extensions.json
@@ -119,6 +119,7 @@
   {
     "sprite":"island",
     "name":"island",
+    "tiling":"1",
     "color":
       [
         "6",
@@ -191,6 +192,7 @@
   {
     "sprite":"wall_map",
     "name":"wall_map",
+    "tiling":"1",
     "color":
       [
         "1",
