--- a/custom/vanilla-extensions.json
+++ b/custom/vanilla-extensions.json
@@ -216,5 +216,159 @@
         "5",
         "2"
       ]
+  },
+  {
+    "name":"sale",
+    "sprite":"sale",
+    "color":
+    [
+      "4",
+      "2"
+    ]
+  },
+  {
+    "name":"text_sale",
+    "sprite":"text_sale",
+    "color":
+    [
+      "4",
+      "2"
+    ]
+  },
+  {
+    "name":"level",
+    "sprite":"level",
+    "color":[
+      "1",
+      "2"
+    ]
+  },
+  {
+    "name":"text_select",
+    "sprite":"text_select",
+    "color":[
+      "1",
+      "3"
+    ]
+  },
+  {
+    "name":"icon",
+    "sprite":"icon",
+    "color":[
+      "1",
+      "3"
+    ]
+  },
+  {
+    "name":"icon_abc",
+    "sprite":"icon_abc",
+    "color":[
+      "1",
+      "3"
+    ]
+  },
+  {
+    "name":"icon_abstract",
+    "sprite":"icon_abstract",
+    "color":[
+      "1",
+      "3"
+    ]
+  },
+  {
+    "name":"icon_cave",
+    "sprite":"icon_cave",
+    "color":[
+      "1",
+      "3"
+    ]
+  },
+  {
+    "name":"icon_dust",
+    "sprite":"icon:dust",
+    "color":[
+      "1",
+      "3"
+    ]
+  },
+  {
+    "name":"icon_fall",
+    "sprite":"icon_fall",
+    "color":[
+      "1",
+      "3"
+    ]
+  },
+  {
+    "name":"icon_forest",
+    "sprite":"icon_forest",
+    "color":[
+      "1",
+      "3"
+    ]
+  },
+  {
+    "name":"icon_garden",
+    "sprite":"icon_garden",
+    "color":[
+      "1",
+      "3"
+    ]
+  },
+  {
+    "name":"icon_island",
+    "sprite":"icon_island",
+    "color":[
+      "1",
+      "3"
+    ]
+  },
+  {
+    "name":"icon_lake",
+    "sprite":"icon_lake",
+    "color":[
+      "1",
+      "3"
+    ]
+  },
+  {
+    "name":"icon_level",
+    "sprite":"icon_level",
+    "color":[
+      "1",
+      "3"
+    ]
+  },
+  {
+    "name":"icon_meta",
+    "sprite":"icon_meta",
+    "color":[
+      "1",
+      "3"
+    ]
+  },
+  {
+    "name":"icon_mountain",
+    "sprite":"icon_mountain",
+    "color":[
+      "1",
+      "3"
+    ]
+  },
+  {
+    "name":"icon_ruins",
+    "sprite":"icon_ruins",
+    "color":[
+      "1",
+      "3"
+    ]
+  },
+  {
+    "name":"icon_space",
+    "sprite":"icon_space",
+    "color":[
+      "1",
+      "3"
+    ]
   }
 ]
