--- a/custom/vanilla-extensions.json
+++ b/custom/vanilla-extensions.json
@@ -1,374 +1,91 @@
 [
-  {
-    "sprite":"text_idle",
-    "name":"text_idle",
-    "color":
-      [
-        "0",
-        "3"
-      ]
-  },
-  {
-    "sprite":"text_without",
-    "name":"text_without",
-    "color":
-      [
-        "0",
-        "3"
-      ]
-  },
-  {
-    "sprite":"text_play",
-    "name":"text_play",
-    "color":
-      [
-        "0",
-        "3"
-      ]
-  },
-  {
-    "sprite":"text_power",
-    "name":"text_power",
-    "color":
-      [
-        "2",
-        "4"
-      ]
-  },
-  {
-    "sprite":"text_powered",
-    "name":"text_powered",
-    "color":
-      [
-        "2",
-        "4"
-      ]
-  },
-  {
-    "sprite":"text_back",
-    "name":"text_back",
-    "color":
-      [
-        "0",
-        "3"
-      ]
-  },
-  {
-    "sprite":"text_chill",
-    "name":"text_chill",
-    "color":
-      [
+    {
+        "name":"text_j",
+        "sprite":"text_j",
+        "color":[
         "1",
-        "4"
-      ]
-  },
-  {
-    "sprite":"error",
-    "name":"error",
-    "color":
-      [
-        "0",
         "3"
-      ]
-  },
-  {
-    "sprite":"what",
-    "name":"what",
-    "color":
-      [
-        "0",
-        "3"
-      ]
-  },
-  {
-    "sprite":"cup",
-    "name":"cup",
-    "color":
-      [
-        "0",
-        "3"
-      ]
-  },
-  {
-    "sprite":"door_map",
-    "name":"door_map",
-    "color":
-      [
-        "2",
-        "2"
-      ]
-  },
-  {
-    "sprite":"grid",
-    "name":"grid",
-    "color":
-      [
-        "4",
-        "2"
-      ]
-  },
-  {
-    "sprite":"husk_map",
-    "name":"husk_map",
-    "color":
-      [
-        "6",
-        "1"
-      ]
-  },
-  {
-    "sprite":"island",
-    "name":"island",
-    "tiling":"1",
-    "color":
-      [
-        "6",
-        "1"
-      ]
-  },
-  {
-    "sprite":"ladder",
-    "name":"ladder",
-    "color":
-      [
-        "6",
-        "1"
-      ]
-  },
-  {
-    "sprite":"shirt",
-    "name":"shirt",
-    "color":
-      [
-        "4",
-        "2"
-      ]
-  },
-  {
-    "sprite":"text_cup",
-    "name":"text_cup",
-    "color":
-      [
-        "4",
-        "2"
-      ]
-  },
-  {
-    "sprite":"text_ladder",
-    "name":"text_ladder",
-    "color":
-      [
-        "6",
-        "1"
-      ]
-  },
-  {
-    "sprite":"text_shirt",
-    "name":"text_shirt",
-    "color":
-      [
-        "0",
-        "3"
-      ]
-  },
-  {
-    "sprite":"tree_map",
-    "name":"tree_map",
-    "color":
-      [
-        "5",
-        "2"
-      ]
-  },
-  {
-    "sprite":"tree2",
-    "name":"tree2",
-    "color":
-      [
-        "5",
-        "2"
-      ]
-  },
-  {
-    "sprite":"wall_map",
-    "name":"wall_map",
-    "tiling":"1",
-    "color":
-      [
+        ]
+    },
+    {
+        "name":"text_k",
+        "sprite":"text_k",
+        "color":[
         "1",
-        "1"
-      ]
-  },
-  {
-    "sprite":"cash",
-    "name":"cash",
-    "color":
-      [
-        "5",
-        "2"
-      ]
-  },
-  {
-    "sprite":"text_cash",
-    "name":"text_cash",
-    "color":
-      [
-        "5",
-        "2"
-      ]
-  },
-  {
-    "name":"sale",
-    "sprite":"sale",
-    "color":
-    [
-      "4",
-      "2"
-    ]
-  },
-  {
-    "name":"text_sale",
-    "sprite":"text_sale",
-    "color":
-    [
-      "4",
-      "2"
-    ]
-  },
-  {
-    "name":"level",
-    "sprite":"level",
-    "color":[
-      "1",
-      "2"
-    ]
-  },
-  {
-    "name":"text_select",
-    "sprite":"text_select",
-    "color":[
-      "1",
-      "3"
-    ]
-  },
-  {
-    "name":"icon",
-    "sprite":"icon",
-    "color":[
-      "1",
-      "3"
-    ]
-  },
-  {
-    "name":"icon_abc",
-    "sprite":"icon_abc",
-    "color":[
-      "1",
-      "3"
-    ]
-  },
-  {
-    "name":"icon_abstract",
-    "sprite":"icon_abstract",
-    "color":[
-      "1",
-      "3"
-    ]
-  },
-  {
-    "name":"icon_cave",
-    "sprite":"icon_cave",
-    "color":[
-      "1",
-      "3"
-    ]
-  },
-  {
-    "name":"icon_dust",
-    "sprite":"icon:dust",
-    "color":[
-      "1",
-      "3"
-    ]
-  },
-  {
-    "name":"icon_fall",
-    "sprite":"icon_fall",
-    "color":[
-      "1",
-      "3"
-    ]
-  },
-  {
-    "name":"icon_forest",
-    "sprite":"icon_forest",
-    "color":[
-      "1",
-      "3"
-    ]
-  },
-  {
-    "name":"icon_garden",
-    "sprite":"icon_garden",
-    "color":[
-      "1",
-      "3"
-    ]
-  },
-  {
-    "name":"icon_island",
-    "sprite":"icon_island",
-    "color":[
-      "1",
-      "3"
-    ]
-  },
-  {
-    "name":"icon_lake",
-    "sprite":"icon_lake",
-    "color":[
-      "1",
-      "3"
-    ]
-  },
-  {
-    "name":"icon_level",
-    "sprite":"icon_level",
-    "color":[
-      "1",
-      "3"
-    ]
-  },
-  {
-    "name":"icon_meta",
-    "sprite":"icon_meta",
-    "color":[
-      "1",
-      "3"
-    ]
-  },
-  {
-    "name":"icon_mountain",
-    "sprite":"icon_mountain",
-    "color":[
-      "1",
-      "3"
-    ]
-  },
-  {
-    "name":"icon_ruins",
-    "sprite":"icon_ruins",
-    "color":[
-      "1",
-      "3"
-    ]
-  },
-  {
-    "name":"icon_space",
-    "sprite":"icon_space",
-    "color":[
-      "1",
-      "3"
-    ]
-  }
+        "3"
+        ]
+    },
+    {
+        "name":"text_p",
+        "sprite":"text_p",
+        "color":[
+        "1",
+        "3"
+        ]
+    },
+    {
+        "name":"text_q",
+        "sprite":"text_q",
+        "color":[
+        "1",
+        "3"
+        ]
+    },
+    {
+        "name":"text_y",
+        "sprite":"text_y",
+        "color":[
+        "1",
+        "3"
+        ]
+    },
+    {
+        "name":"text_z",
+        "sprite":"text_z",
+        "color":[
+        "1",
+        "3"
+        ]
+    },
+    {
+        "name":"text_select",
+        "sprite":"text_select",
+        "color":[
+            "1",
+            "3"
+        ]
+    },
+    {
+        "name":"level",
+        "sprite":"level",
+        "color":[
+            "1",
+            "2"
+        ]
+    },
+    {
+        "name":"sale",
+        "sprite":"sale",
+        "color":
+        [
+            "4",
+            "2"
+        ]
+    },
+    {
+        "name":"text_sale",
+        "sprite":"text_sale",
+        "color":[
+            "4",
+            "2"
+        ]
+    },
+    {
+        "name":"spore",
+        "sprite":"spore",
+        "color":[
+            "0",
+            "3"
+        ]
+    }
 ]
