--- a/custom/vanilla-extensions.json
+++ b/custom/vanilla-extensions.json
@@ -5,7 +5,8 @@
         "color":[
         "0",
         "3"
-        ]
+        ],
+        "tiling":"-1"
     },
     {
         "name":"text_k",
@@ -13,7 +14,8 @@
         "color":[
         "0",
         "3"
-        ]
+        ],
+        "tiling":"-1"
     },
     {
         "name":"text_p",
@@ -21,7 +23,8 @@
         "color":[
         "0",
         "3"
-        ]
+        ],
+        "tiling":"-1"
     },
     {
         "name":"text_q",
@@ -29,7 +32,8 @@
         "color":[
         "0",
         "3"
-        ]
+        ],
+        "tiling":"-1"
     },
     {
         "name":"text_y",
@@ -37,7 +41,8 @@
         "color":[
         "0",
         "3"
-        ]
+        ],
+        "tiling":"-1"
     },
     {
         "name":"text_z",
@@ -45,7 +50,8 @@
         "color":[
         "0",
         "3"
-        ]
+        ],
+        "tiling":"-1"
     },
     {
         "name":"text_select",
@@ -53,7 +59,8 @@
         "color":[
             "1",
             "3"
-        ]
+        ],
+        "tiling":"-1"
     },
     {
         "name":"level",
@@ -61,7 +68,8 @@
         "color":[
             "0",
             "3"
-        ]
+        ],
+        "tiling":"-1"
     },
     {
         "name":"sale",
@@ -70,7 +78,8 @@
         [
             "4",
             "2"
-        ]
+        ],
+        "tiling":"-1"
     },
     {
         "name":"text_sale",
@@ -78,7 +87,8 @@
         "color":[
             "4",
             "2"
-        ]
+        ],
+        "tiling":"-1"
     },
     {
         "name":"spore",
@@ -86,7 +96,8 @@
         "color":[
             "0",
             "3"
-        ]
+        ],
+        "tiling":"-1"
     },
     {
         "name":"edge",
@@ -94,6 +105,7 @@
         "color":[
             "1",
             "0"
-        ]
+        ],
+        "tiling":"-1"
     }
 ]
