--- a/custom/vanilla-extensions.json
+++ b/custom/vanilla-extensions.json
@@ -6,7 +6,8 @@
         "0",
         "3"
         ],
-        "tiling":"-1"
+        "tiling":"-1",
+        "type":"5"
     },
     {
         "name":"text_k",
@@ -15,7 +16,8 @@
         "0",
         "3"
         ],
-        "tiling":"-1"
+        "tiling":"-1",
+        "type":"5"
     },
     {
         "name":"text_p",
@@ -24,7 +26,8 @@
         "0",
         "3"
         ],
-        "tiling":"-1"
+        "tiling":"-1",
+        "type":"5"
     },
     {
         "name":"text_q",
@@ -33,7 +36,8 @@
         "0",
         "3"
         ],
-        "tiling":"-1"
+        "tiling":"-1",
+        "type":"5"
     },
     {
         "name":"text_y",
@@ -42,7 +46,8 @@
         "0",
         "3"
         ],
-        "tiling":"-1"
+        "tiling":"-1",
+        "type":"5"
     },
     {
         "name":"text_z",
@@ -51,7 +56,8 @@
         "0",
         "3"
         ],
-        "tiling":"-1"
+        "tiling":"-1",
+        "type":"5"
     },
     {
         "name":"text_select",
@@ -60,7 +66,8 @@
             "1",
             "3"
         ],
-        "tiling":"-1"
+        "tiling":"-1",
+        "type":"2"
     },
     {
         "name":"level",
@@ -88,7 +95,8 @@
             "4",
             "2"
         ],
-        "tiling":"-1"
+        "tiling":"-1",
+        "type":"0"
     },
     {
         "name":"spore",
