--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,10 @@ auth.json
 log.txt
 .DS_Store
 .vscode/
-target
-cache
+target/color/*
+target/renders/*
+target/letters/big/*
+target/letters/small/*
+cache/*
 src/__pycache__
 src/cogs/__pycache__
