--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ target/color/*
 target/renders/*
 target/letters/big/*
 target/letters/small/*
+target/letters/thick/*
 target/tilelist.txt
 cache/*
 **/__pycache__
