--- a/data/custom/vanilla-extensions.json
+++ b/data/custom/vanilla-extensions.json
@@ -1,5 +1,15 @@
 [
     {
+        "sprite":"plus",
+        "name":"plus",
+        "color":
+            [
+                "0",
+                "3"
+            ],
+            "tiling":"-1"
+    },
+    {
         "sprite":"goose",
         "name":"goose",
         "color":
