Brand new search command!

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,4 @@ discord.py>=1.7.3
 Pillow>=7.0
 jishaku>=1.18
 git+https://github.com/Rapptz/asqlite
+git+https://github.com/Rapptz/discord-ext-menus
