Add a new parser model

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,5 @@ Pillow>=8.3.0
 jishaku>=1.18
 git+https://github.com/Rapptz/asqlite
 git+https://github.com/Rapptz/discord-ext-menus
-numpy
+numpy>=1.18
+lark-parser>=0.12
